--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     Coded by <a href="https://www.linkedin.com/in/cristian-ledesma-58b628134/">Cristian Ledesma</a>.
   </div>
   
-  <script type="text/javascript" src="scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
